# llm-cli-client

./: .gitignore  README.md  debug.py  llm_client.py  pyproject.toml  requirements.txt
src/: cli.py
src/llm_client/: cli.py  config.py
tests/: test_llm_client.py
